crates/dump/src/reader/v1/snapshots/dump__reader__v1__test__read_dump_v1-10.snap
---
source: dump/src/reader/v1/mod.rs
expression: dnd_spells.settings().unwrap()
---
{
  "rankingRules": [
    "typo",
    "words",
    "proximity",
    "attribute",
    "wordsPosition",
    "exactness"
  ],
  "distinctAttribute": null,
  "searchableAttributes": [
    "*"
  ],
  "displayedAttributes": [
    "*"
  ],
  "stopWords": [],
  "synonyms": {},
  "attributesForFaceting": []
}
