crates/dump/src/reader/v1/snapshots/dump__reader__v1__test__read_dump_v1-6.snap
---
source: dump/src/reader/v1/mod.rs
expression: movies.settings().unwrap()
---
{
  "rankingRules": [
    "typo",
    "words",
    "proximity",
    "attribute",
    "wordsPosition",
    "exactness",
    "asc(release_date)"
  ],
  "distinctAttribute": null,
  "searchableAttributes": [
    "*"
  ],
  "displayedAttributes": [
    "*"
  ],
  "stopWords": [],
  "synonyms": {},
  "attributesForFaceting": [
    "id",
    "genres"
  ]
}
